--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 CATOMIC ($CATOMIC)</p>
             <div class="hero lg:h-screen flex flex-col-reverse justify-between lg:flex-row items-center mx-5 lg:mx-10">
                 <div class="main-logo about-logo w-fill lg:w-1/3 rounded-full mt-8">
-                    <img src="test.png" alt="Animated" />
+                    <img src="test_banner.png" alt="Animated" />
 
                 </div>
                 <div class="main-head text-white w-full lg:w-1/2 flex flex-col ">
