--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CATOMIC</title>
+    <title>ATOMICAT</title>
     <!-- Add your CSS framework, e.g., CDN link for Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
@@ -24,6 +24,13 @@
 
 </head>
 
+<style>
+    /* Ajoutez une classe pour appliquer la police Adigiana-Toybox-Regular */
+    .adigiana-font {
+        font-family: 'Adigiana-Toybox-Regular', sans-serif;
+    }
+</style>
+
 <body class="font-Montserrat bg-black">
 
     <!-- Header Section -->
@@ -35,9 +42,9 @@
                     style="background-image: linear-gradient(to right, rgb(150, 24, 182), violet);
                 color: transparent;
                 -webkit-background-clip: text; /* For Safari and older versions of Chrome */
-                background-clip: text;">CATOMIC </span>
+                background-clip: text;"><img class="imglogo" src="name.png" alt="Animated etf logo"  width="150px" height="100px"></span>
             </a>
-            <button data-collapse-toggle="navbar-default" type="button" style="color: cyan;"
+            <button data-collapse-toggle="navbar-default" type="button" style="color: rgb(255, 230, 0);"
                 class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-white rounded-sm md:hidden hover:bg-cyan-500  "
                 aria-controls="navbar-default" aria-expanded="false" onclick="toggleMenu()">
                 <span class="sr-only">Open main menu</span>
@@ -49,7 +56,7 @@
                     </svg>
                 </span>
             </button>
-            <div class="w-full md:block md:w-auto hidden" id="navbar-default">
+            <div class="adigiana-font" id="navbar-default">
                 <ul
                     class="font-medium flex flex-col  p-4 md:p-0 mt-4 border rounded-sm md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
                     <li>
@@ -64,7 +71,7 @@
                     </li>
                     <li>
                         <a href="#tokenomics"
-                            class="violet block py-2 px-3 text-white text-lg lg:text-xl rounded hover:text-pink-500 md:hover:bg-transparent md:border-0 md:hover:text-pink-500 md:p-0"
+                            class="yellow block py-2 px-3 text-white text-lg lg:text-xl rounded hover:text-pink-500 md:hover:bg-transparent md:border-0 md:hover:text-pink-500 md:p-0"
                             aria-current="page"><i class="bx bx-coin"></i> TOKENOMICS</a>
                     </li>
                     <li>
@@ -81,10 +88,10 @@
             </div>
 
 
-            <div class="my-2 md:block md:w-auto hidden" id="navbar-default-btn">
+            <div class="adigiana-font" id="navbar-default-btn">
                 <a href="https://t.me/replace" class="">
                     <button type="button"
-                        class="text-white bg-black hover:bg-white hover:text-black border border-white focus:outline-none focus:ring-4 focus:ring-white font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 ">
+                        class="text-white bg-black hover:bg-white hover:text-black border border-white focus:outline-none focus:ring-4 focus:ring-white font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 " style="font-size: 25px;">
                         Join the community
                     </button>
                 </a>
@@ -94,6 +101,19 @@
 
 
     <!-- Hero Section -->
+    <div class="lg:py-12 animate-marquee absolute left-0 z-20 flex w-screen overflow-x-hidden text-white top-15 lg:-top-8 mt-6 mb-6 lg:h-screen lg:mt-48 lg:mb-52 2xl:mt-40 2xl:mb-72">
+        <span class="mx-2 text-2xl font-bold lg:text-8xl">$ATOMIC</span>
+        <span class="mx-2 text-2xl font-bold lg:text-8xl">$ATOMIC</span>
+        <span class="mx-2 text-2xl font-bold lg:text-8xl">$ATOMIC</span>
+        <span class="mx-2 text-2xl font-bold lg:text-8xl">$ATOMIC</span>
+        <span class="mx-2 text-2xl font-bold lg:text-8xl">$ATOMIC</span>
+    </div>
+    <div class="lg:py-12 animate-marquee2 absolute left-0 z-20 flex w-screen overflow-x-hidden text-white top-15 lg:-top-8 mt-6 mb-6 lg:h-screen lg:mt-48 lg:mb-52 2xl:mt-40 2xl:mb-72">
+        <span class="mx-2 text-2xl font-bold lg:text-8xl">$ATOMIC</span>
+        <span class="mx-2 text-2xl font-bold lg:text-8xl">$ATOMIC</span>
+        <span class="mx-2 text-2xl font-bold lg:text-8xl">$ATOMIC</span>
+        <span class="mx-2 text-2xl font-bold lg:text-8xl">$ATOMIC</span>
+    </div>
     <section
         class="flex flex-wrap justify-center items-center relative text-white text-center py-10 bg-cover bg-center">
 
@@ -102,17 +122,17 @@
             <div
                 class="main-head text-white w-full m-0 md:m-10 lg:m-0 md:w-1/3 lg:w-1/2 flex flex-col justify-center items-center gap-10">
 
-                <h1 class="text-3xl text-center lg:text-5xl font-extrabold break-words lg:px-4 mt-6 lg:mt-0">Welcome to
+                <h1 class="adigiana-font"style="font-size: 70px;"><br>Welcome to
                     <br>
                     <span class="text-center text-4xl lg:text-7xl text-cyan-500 glow-text" style="background-image: linear-gradient(to right, cyan, violet);
                     color: transparent;
                     -webkit-background-clip: text;
-                    background-clip: text;">CATOMIC</span>
+                    background-clip: text;"><img class="imglogo" src="name.png" alt="Animated etf logo"  width="500px" height="400px"></span>
                 </h1>
                 <a href="https://raydium.io/swap/?outputCurrency=GtDZKAqvMZMnti46ZewMiXCa4oXF4bZxwQPoKzXPFxZn"
                     class="w-full md:w-1/2 lg:w-1/2">
                     <button type="button"
-                        class="text-white flex justify-center gap-x-2 items-center  w-full bg-black hover:bg-white hover:text-black border border-white focus:outline-none focus:ring-4 focus:ring-white font-medium rounded-full text-lg px-5 py-2.5 me-2 mb-2 ">
+                        class="text-white flex justify-center gap-x-2 items-center  w-full bg-black hover:bg-white hover:text-black border border-white focus:outline-none focus:ring-4 focus:ring-white font-medium rounded-full text-lg px-5 py-2.5 me-2 mb-2 adigiana-font">
                         BUY
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none"
                             class="svgg">
@@ -123,14 +143,14 @@
                     </button>
                 </a>
                 <div class="flex justify-center items-center gap-x-3 mx-auto w-full">
-                    <p class="text-white">CA: </p>
+                    <p class="adigiana-font">CA: </p>
                     <div id="hs-clipboard-basic" class=" text-white border border-blue-500 rounded-lg w-1/2 md:w-1/2">
                         <input id="hs-clipboard-input" type="text"
-                            class="py-3 px-4 block rounded-lg text-sm w-full md:w-full placeholder:text-white focus:border-blue-500 focus:ring-blue-500 bg-gray-900 border-gray-700"
+                            class="py-3 px-4 block rounded-lg text-sm w-full md:w-full placeholder:text-white focus:border-blue-500 focus:ring-blue-500 bg-gray-900 border-gray-700 adigiana-font"
                             value="0xbEF1a4b285274B64876f61dB5cCF07E439312D43">
                     </div>
                     <button type="button"
-                        class="js-clipboard p-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-blue-500 bg-gray-500 text-white shadow-sm hover:bg-blue-600 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
+                        class="js-clipboard p-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-black-500 bg-gray-500 text-white shadow-sm hover:bg-blue-600 disabled:opacity-50 disabled:pointer-events-none dark:bg-slate-900 dark:border-gray-700 dark:text-white dark:hover:bg-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600"
                         data-clipboard-target="#hs-clipboard-basic" data-clipboard-action="copy"
                         data-clipboard-success-text="Copied" onclick="changeCopyText(this)">
                         <svg class="js-clipboard-default w-4 h-4 group-hover:rotate-6 transition"
@@ -145,17 +165,16 @@
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <polyline points="20 6 9 17 4 12" />
                         </svg>
-                        <span class="copy-text">copy</span>
+                        <span class="adigiana-font">copy</span>
                     </button>
                 </div>
                 <a href="https://rugcheck.xyz/tokens/EVDQN4P1YTTD1Y3eLBDBoALWnR4aMBC9y2xUYCrbGbuy">
-                    <p class="text-xl lg:text-2xl text-white underline">AUDIT</p>
+                    <p class="text-xl lg:text-2xl text-white underline adigiana-font">AUDIT</p>
                 </a>
             </div>
             <div class="main-logo  w-80 md:96 lg:w-1/2 ">
-                <img class="imglogo" src="test.png" alt="Animated etf logo">
-                <br>
-                <video id="video" autoplay muted playsinline loop onClick="this.pause(); this.muted=false; this.play();" width="700px" height="500px">
+                <!-- <img class="imglogo" src="test.png" alt="Animated etf logo"> -->
+                <video id="video" autoplay muted playsinline loop onClick="this.pause(); this.muted=false; this.play();" width="650px" height="550px">
                     <source 
             src="video.mp4" 
                             type="video/mp4" />
@@ -214,24 +233,18 @@
     <!-- about section -->
     <section id="about" class="shadow-2xl py-16">
         <div class="flex flex-col items-center justify-center mx-5 lg:mx-20 gap-5">
-            <p class="text-4xl lg:text-5xl font-extrabold text-center text-white ">Introducing
-                CATOMIC ($CATOMIC)</p>
-            <div class="hero lg:h-screen flex flex-col-reverse justify-between lg:flex-row items-center mx-5 lg:mx-10">
-                <div class="main-logo about-logo w-fill lg:w-1/3 rounded-full mt-8">
-                    <img src="test_banner.png" alt="Animated" />
+            <p class="text-4xl lg:text-5xl font-extrabold text-center text-white adigiana-font">About $ATOMICAT</p>
+            <div class="lg:h-screen flex flex-col-reverse justify-between lg:flex-row items-center mx-5 lg:mx-10">
+                <div >
+                    <img src="test_banner.png" alt="Animated" width="800px" height="600px"/>
 
                 </div>
                 <div class="main-head text-white w-full lg:w-1/2 flex flex-col ">
                     <div class="flex flex-col lg:flex-row items-center justify-center ">
                         <p
-                            class="about-context about-text text-gray-300 mx-2 md:mx-12 text-left md:text-left md:text-xl lg:text-2xl mt-5  flex flex-col">
+                            class="about-context about-text text-gray-300 mx-2 md:mx-12 text-left md:text-left md:text-xl lg:text-2xl mt-5  flex flex-col adigiana-font">
                             <span>
-                                CATOMIC  is a community made and owned Crypto currency project. We are aspiring to
-                                become the new high quality standard within the Crypto Space. A group of like minded
-                                individuals have come together to create the new golden standard of what a community
-                                should have to offer. We have a 5% tax on both buy and sell orders.
-                                We are in no way affiliated with CAT family. However, we will be donating
-                                5% of our marketing budget to helping abandoned cats at the SPA.
+                                ATOMICAT isn't just another crypto project – we're here to obliterate every feline in the Solana game. GOOD LUCK keeping up with us! We're not just aiming to be good; we're gunning for greatness in the wild world of crypto. Led by a crew of relentless innovators, we're crafting the ultimate community-driven crypto experience. No affiliations with the CAT clan, but watch out, because ATOMICAT is on a mission to rule the roost. Strap in, it's going to be a wild ride!
                             </span>
                         </p>
                     </div>
@@ -241,25 +254,26 @@
     </section>
 
     <!-- Tokenomics Section -->
-    <section id="tokenomics" class=" text-white py-16">
+    <section id="tokenomics" class=" text-white py-16 adigiana-font">
         <div class="container mx-auto text-center">
             <div class="token1 flex flex-col-reverse md:flex-row md:items-center justify-start mx-4 md:mx-6 lg:mx-8">
                 <h1 class="token text-5xl lg:text-7xl font-extrabold mb-8 text-white ">Tokenomics</h1>
                 <img class="w-32 md:w-42 lg:w-64 px-5" src="images/tok.svg" alt="">
             </div>
+            <img src="tokenomic.png" alt="Animated" width="400px" height="300px" style="display: block; margin: 0 auto;"/>
             <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-8 m-10 align-middle ">
                 <!-- Total Supply -->
                 <div class="token1 p-6 border-4 border-white rounded-lg shadow-2xl">
-                    <h1 class="text-3xl font-bold mb-4 text-white">Total Supply</h1>
-                    <p class="tok pt-5">5555555555555555 CATOMIC  </p>
+                    <h1 class="text-3xl font-bold mb-4 text-white">Total Supply</h1><br><br>
+                    <p class="text-3xl font-bold mb-4 text-white">5555555555555555 ATOMICAT  </p>
                 </div>
                 <!-- Initial Liquidity -->
                 <div class="token2 p-6 border-4 border-white rounded-lg shadow-md">
-                    <h1 class="text-3xl font-bold mb-4 text-white">Tax</h1>
-                    <p class="tok   pt-5">5/5</p>
+                    <h1 class="text-3xl font-bold mb-4 text-white">LP BURNT<br><br>0% TAX<br><br>MINT REVOKED</h1>
+                    <p class="tok   pt-5"></p>
                 </div>
                 <!-- addd -->
-                <div class="token3 p-6 border-4 border-white rounded-lg shadow-md">
+                <div class="token3 p-6 bordetr-4 border-white rounded-lg shadow-md">
                     <h1 class="text-3xl font-bold mb-4 text-white">CA</h1>
 
                     <div class="flex justify-center items-center w-full gap-x-3">
@@ -296,11 +310,10 @@
 
     <!-- partners section -->
     <section id="partners">
-        <div class="container mx-auto text-center p-5 lg:pb-20">
+        <div class="container mx-auto text-center p-5 lg:pb-20 adigiana-font">
             <div
                 class="token1 flex flex-col-reverse md:flex-row items-center justify-center lg:justify-start mx-4 md:mx-6 lg:mx-8">
                 <h1 class="token text-5xl lg:text-7xl font-extrabold mb-8 text-white ">Partners</h1>
-                <img class="w-32 md:w-42 lg:w-64 px-5" src="partners.png" alt="">
             </div>
 
             <div
@@ -341,12 +354,16 @@
     <section id="social">
         <div class="flex flex-col-reverse items-center md:flex-row justify-between gap-5 ">
             <div class="social w-full md:w-1/2 mx-4 px-4 flex justify-center items-center">
-                <img class="w-80 md:96 lg:w-[1000px] mx-8" src="test.png" alt="">
+                <video id="video" autoplay muted playsinline loop onClick="this.pause(); this.muted=false; this.play();" width="300px" height="200px">
+                    <source 
+            src="videoeyes.mp4" 
+                            type="video/mp4" />
+                <!-- <img class="w-80 md:96 lg:w-[1000px] mx-8" src="test.png" alt=""> -->
             </div>
 
             <div class="social w-full md:w-1/2 mx-4 px-4">
-                <h1 class="text-center md:text-left text-3xl lg:text-5xl font-extrabold mb-8 text-white ">Follow
-                    CATOMIC on social media</h1>
+                <h1 class="text-center md:text-left text-3xl lg:text-5xl font-extrabold mb-8 text-white adigiana-font">Follow
+                    ATOMICAT on social media</h1>
                 <div class="flex items-center justify-center md:justify-start gap-4 ">
                     <a href="https://t.me/replace">
                         <img class="w-24 transform hover:scale-110 transition duration-200" src="social_tg.png"
@@ -355,10 +372,6 @@
                     <a href="https://twitter.com/replace">
                         <img class="w-24 transform hover:scale-110 transition duration-200" src="social_x.png"
                             alt="">
-                    </a>
-                    <a href="">
-                        <img class="w-24 transform hover:scale-110 transition duration-200"
-                            src="social_discord.png" alt="">
                     </a>
                     
                 </div>
@@ -371,7 +384,7 @@
     <footer class="bg-gray-900 text-white py-4 text-center mt-10">
         <div class="container mx-auto">
             <!-- Disclaimer, social media icons, copyright here -->
-            <p class="text-sm text-white">Copyright CATOMIC  © 2024. All rights reserved</p>
+            <p class="text-sm text-white">Copyright ATOMICAT  © 2024. All rights reserved</p>
         </div>
     </footer>
 
@@ -396,10 +409,10 @@
         var navbar = document.getElementById("navbar-default");
 
         if (navbar.style.display === 'none' || navbar.style.display === '') {
-            icon.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: cyan;"><path d="M4 6h16v2H4zm4 5h12v2H8zm5 5h7v2h-7z"></path></svg>';
+            icon.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: yellow;"><path d="M4 6h16v2H4zm4 5h12v2H8zm5 5h7v2h-7z"></path></svg>';
             navbar.style.display = 'block';
         } else {
-            icon.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: cyan;"><path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path></svg>';
+            icon.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: yellow;"><path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path></svg>';
             navbar.style.display = 'none';
         }
     }
