--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
     </section>
 
     <!-- Tokenomics Section -->
-    <section id="tokenomics" class=" text-white py-16 adigiana-font">
+    <section id="tokenomics" class="text-white py-16 adigiana-font">
         <div class="container mx-auto text-center">
-            <div class="token1 flex flex-col-reverse md:flex-row md:items-center justify-start mx-4 md:mx-6 lg:mx-8">
-                <h1 class="token text-5xl lg:text-7xl font-extrabold mb-8 text-white ">Tokenomics</h1>
-                <img class="w-32 md:w-42 lg:w-64 px-5" src="images/tok.svg" alt="">
+            <div class="flex items-center justify-start mx-4 md:mx-6 lg:mx-8">
+                <h1 class="token text-5xl lg:text-7xl font-extrabold mb-8">Tokenomics</h1>
+                <img class="w-24 md:w-32 lg:w-40 px-5" src="tok.png" alt="">
             </div>
             <img src="tokenomic.png" alt="Animated" width="400px" height="300px" style="display: block; margin: 0 auto;"/>
             <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-8 m-10 align-middle ">
@@ -314,6 +314,7 @@
             <div
                 class="token1 flex flex-col-reverse md:flex-row items-center justify-center lg:justify-start mx-4 md:mx-6 lg:mx-8">
                 <h1 class="token text-5xl lg:text-7xl font-extrabold mb-8 text-white ">Partners</h1>
+                <img class="w-24 md:w-62 lg:w-40 px-5" src="partners.png" alt="">
             </div>
 
             <div
@@ -366,7 +367,7 @@
                     ATOMICAT on social media</h1>
                 <div class="flex items-center justify-center md:justify-start gap-4 ">
                     <a href="https://t.me/replace">
-                        <img class="w-24 transform hover:scale-110 transition duration-200" src="social_tg.png"
+                        <img class="w-14 transform hover:scale-110 transition duration-200" src="social_tg.png"
                             alt="">
                     </a>
                     <a href="https://twitter.com/replace">
