--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
                 <h1 class="text-center md:text-left text-3xl lg:text-5xl font-extrabold mb-8 text-white adigiana-font">Follow
                     ATOMICAT on social media</h1>
                 <div class="flex items-center justify-center md:justify-start gap-4 ">
-                    <a href="https://twitter.com/replace">
-                        <img class="w-24 transform hover:scale-110 transition duration-200" src="social_x.png"
+                    <a href="https://t.me/replace">
+                        <img class="w-24 transform hover:scale-110 transition duration-200" src="social_TG.png"
                             alt="">
                     </a>
                     </a>
